assets/styles/style.css
.profile-card-wrapper {
  position: relative;
  padding-bottom: 0;
  padding-right: 10px;
}

@media (min-width: 992px) {
  .profile-card-wrapper {
    position: fixed;
    height: 100%;
    padding-right: 0;
    padding-bottom: 10px;
    overflow-y: hidden;
  }

  .card-wrapper {
    float: right;
  }
}

.profile-card-wrapper + .card-wrapper {
  padding-bottom: 0px;
}

.detail {
  padding: 5px;
}

.detail h3 {
  position: static;
  left: -44px;
}

.detail-highlights {
  padding-left: 20px;
}

@media (min-width: 768px) {
  .detail {
    padding: 10px 10px 10px 50px;
  }

  .detail h3 {
    position: relative;
  }

  .detail-highlights {
    padding-left: 40px;
  }
}

.detail h3 i {
  min-width: 40px;
  min-height: 20px;
  text-align: center;
}

.detail-item {
  padding: 10px 0;
  margin: 0 3px;
  border-top: 1px solid #ccd6dd;
}

.detail-item-content {
  padding: 0;
}

@media (min-width: 768px) {
  .detail-item-content {
    padding-right: 10px;
  }

  .detail-item-content.col-sm-9 {
    border-right: 1px solid #ccd6dd;
  }
}

.detail-highlights li {
  margin-bottom: 2px;
}

.labels {
  line-height: 2;
  word-spacing: 5px;
}

.label-keyword {
  font-size: inherit;
  background-color: #7eb0db;
}

#skills h4, #interests h4 {
  font-weight: bold;
}

#references .detail-item {
  border: none;
}

